--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="./script.js"></script>
+    <!-- Added script tag allowing html to hvae desired js functionality -->
   </head>
   <body>
     <div class="wrapper">
@@ -29,7 +31,8 @@
         </div>
       </div>
     </div>
-    <script src="temp.js"></script>
-    <script src="add_to_page.js"></script>
+    <!-- <script src="temp.js"></script>
+    <script src="add_to_page.js"></script> -->
+    <!-- Removed temp.js and add_to_page.js as they had unknown functionality as they do/did not exist intially -->
   </body>
 </html>
