moved script tag to bottom of html to prevent reference error caused by js file loading before html file; simplified generatePassword function in js file and effectively got a password rendering to the screen

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="./script.js"></script>
-    <!-- Added script tag allowing html to hvae desired js functionality -->
   </head>
   <body>
     <div class="wrapper">
@@ -31,8 +29,9 @@
         </div>
       </div>
     </div>
-    <!-- <script src="temp.js"></script>
-    <script src="add_to_page.js"></script> -->
     <!-- Removed temp.js and add_to_page.js as they had unknown functionality as they do/did not exist intially -->
+    <script src="script.js"></script>
+    <!-- Added script tag allowing html to hvae desired js functionality -->
+    <!-- Moved script.js script tag to the bottom of the html file to prevent js from loading before html and caused reference errors -->
   </body>
 </html>
