edited link and script src/href to account for newly created assets folder; changed style application for copyBtn using cssText to alter button display and background color

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -31,7 +31,7 @@
       </div>
     </div>
     <!-- Removed temp.js and add_to_page.js as they had unknown functionality as they do/did not exist intially -->
-    <script src="script.js"></script>
+    <script src="./assets/script.js"></script>
     <!-- Added script tag allowing html to hvae desired js functionality -->
     <!-- Moved script.js script tag to the bottom of the html file to prevent js from loading before html and caused reference errors -->
   </body>
